--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@shopify/flash-list": "1.6.4",
+    "@types/react": "^18.3.3",
     "axios": "^1.7.2",
     "expo": "~51.0.18",
     "expo-constants": "~16.0.2",
@@ -22,8 +23,10 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-elements": "^3.4.3",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-vector-icons": "^10.1.0",
     "styled-components": "^6.1.11",
     "zustand": "^4.5.4"
   },
@@ -36,7 +39,8 @@
     "@storybook/addon-ondevice-controls": "^7.6.20",
     "@storybook/react-native": "^7.6.20",
     "babel-loader": "^8.3.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "typescript": "^5.5.3"
   },
   "private": true
 }
