--- a/package.json
+++ b/package.json
@@ -32,14 +32,17 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-elements": "^3.4.3",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-reanimated": "^3.13.0",
+    "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.1.0",
     "styled-components": "^6.1.11",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.7",
     "@eslint/compat": "^1.1.0",
     "@eslint/js": "^9.6.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
@@ -52,7 +55,7 @@
     "@testing-library/react-native": "^12.5.1",
     "@types/jest": "^29.5.12",
     "@types/react-test-renderer": "^18.3.0",
-    "babel-loader": "^8.3.0",
+    "babel-loader": "^9.1.3",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "8.x",
     "eslint-config-prettier": "^9.1.0",
