--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "storybook-generate": "sb-rn-get-stories",
     "web": "expo start --web",
     "lint": "eslint .",
-    "lintFixAll": "eslint 'src/**/*.{js,jsx}'",
-    "prettierFixAll": "prettier --write 'src/**/*.{js,jsx}'",
+    "lintFixAll": "eslint 'src/**/*.{ts,tsx}'",
+    "prettierFixAll": "prettier --write 'src/**/*.{ts,tsx}'",
     "fix:lintPrettier": "yarn prettierFixAll && yarn lintFixAll",
     "test": "jest --watch --coverage=false --changedSince=origin/main",
     "testDebug": "jest -o --watch --coverage=false",
@@ -58,6 +58,7 @@
     "babel-loader": "^9.1.3",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "8.x",
+    "eslint-config-expo": "^7.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-native": "^4.1.0",
