--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "axios": "^1.7.2",
     "expo": "~51.0.18",
     "expo-constants": "~16.0.2",
+    "expo-font": "~12.0.7",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.17",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
