--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "generateCoverage": "jest --coverage=true",
     "testFinal": "jest",
     "updateSnapshots": "jest -u --coverage=false",
+    "storybook-generate": "sb-rn-get-stories"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
@@ -41,6 +42,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.3.0",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-web": "~0.19.10",
     "styled-components": "^6.1.11",
     "zustand": "^4.5.4"
   },
@@ -53,6 +55,9 @@
     "@react-native-community/datetimepicker": "^8.1.1",
     "@react-native-community/slider": "^4.5.2",
     "@react-navigation/stack": "^6.4.0",
+    "@storybook/addon-ondevice-actions": "^7.6.20",
+    "@storybook/addon-ondevice-controls": "^7.6.20",
+    "@storybook/react-native": "^7.6.20",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/react-native": "^12.5.1",
