--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.15.0",
-    "react-native-reanimated": "^3.13.0",
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "3.31.1",
+    "react-native-screens": "^3.32.0",
     "react-native-svg": "^15.3.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
@@ -78,6 +78,7 @@
     "react-native-svg-transformer": "^1.5.0",
     "react-shallow-renderer": "^16.15.0",
     "react-test-renderer": "^18.3.1",
+    "typedoc": "^0.26.4",
     "typescript": "^5.5.3",
     "typescript-eslint": "^7.16.0"
   },
