--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "extends": "expo/tsconfig.base",
+  "entryPoints": ["./index.ts"],
   "compilerOptions": {
     "strict": true,
     "paths": {
