--- a/app.json
+++ b/app.json
@@ -3,6 +3,9 @@
     "name": "store",
     "slug": "store",
     "version": "1.0.0",
+    "splash": {
+      "image": "./assets/Logo.png"
+    },
     "plugins": [
       "expo-router",
       [
