--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "@eslint/compat": "^1.1.0",
     "@eslint/js": "^9.6.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/slider": "^4.5.2",
     "@react-navigation/stack": "^6.4.0",
     "@storybook/addon-ondevice-actions": "^7.6.20",
     "@storybook/addon-ondevice-controls": "^7.6.20",
@@ -72,6 +74,7 @@
     "jest-expo": "^51.0.3",
     "prettier": "^3.3.2",
     "react-dom": "18.2.0",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "^18.3.1",
     "typedoc": "^0.26.4",
