--- a/app.json
+++ b/app.json
@@ -11,9 +11,26 @@
       [
         "expo-font",
         {
-          "fonts": ["./assets/fonts/Gabarito-Black.ttf", "./assets/fonts/Gabarito-Bold.ttf", "./assets/fonts/Gabarito-ExtraBold.ttf", "./assets/fonts/Gabarito-Medium.ttf", "./assets/fonts/Gabarito-Regular.ttf", "./assets/fonts/Gabarito-SemiBold.ttf", "./assets/fonts/Gabarito-VariableFont_wght.ttf"]
+          "fonts": [
+            "./assets/fonts/Gabarito-Black.ttf",
+            "./assets/fonts/Gabarito-Bold.ttf",
+            "./assets/fonts/Gabarito-ExtraBold.ttf",
+            "./assets/fonts/Gabarito-Medium.ttf",
+            "./assets/fonts/Gabarito-Regular.ttf",
+            "./assets/fonts/Gabarito-SemiBold.ttf",
+            "./assets/fonts/Gabarito-VariableFont_wght.ttf"
+          ]
         }
       ]
-    ]
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "9e36d26e-b95a-4046-a2d1-4d8e0a5d1609"
+      }
+    },
+    "owner": "pedroferreirac"
   }
 }
