--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@shopify/flash-list": "1.6.4",
-    "@types/react": "^18.3.3",
+    "@types/react": "~18.2.79",
     "axios": "^1.7.2",
     "expo": "~51.0.18",
     "expo-constants": "~16.0.2",
@@ -35,11 +35,11 @@
     "jest-styled-components": "^7.2.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
-    "react-native-gesture-handler": "^2.17.1",
-    "react-native-reanimated": "^3.14.0",
-    "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.32.0",
-    "react-native-svg": "^15.3.0",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
     "styled-components": "^6.1.11",
@@ -51,7 +51,7 @@
     "@eslint/compat": "^1.1.0",
     "@eslint/js": "^9.6.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/slider": "^4.5.2",
     "@react-navigation/stack": "^6.4.0",
     "@storybook/addon-ondevice-actions": "^7.6.20",
@@ -78,7 +78,7 @@
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "^18.3.1",
     "typedoc": "^0.26.4",
-    "typescript": "^5.5.3",
+    "typescript": "~5.3.3",
     "typescript-eslint": "^7.16.0"
   },
   "private": true,
